Motivation for rust

--- a/docs.tex
+++ b/docs.tex
@@ -2,7 +2,7 @@
 \usepackage[
     backend=biber,
     style=alphabetic,
-]{biblatex}
+]{biblatex} 
 \usepackage{graphicx}
 \usepackage{enumitem}
 \usepackage{pdfpages}
@@ -326,228 +326,93 @@ This category is dedicated to fault tolerance methods which do not strictly fall
 
 Another interesting example is specialized compiler which embeds fault tolerance into the software during compilation, independently of the actual software's purpose. Example of this approach is \textbf{"Control flow checking by software signature"} published in \cite{994926}.
 
-\section{Implementation}
+\section{Motivation for Rust}
+One of the main purposes of this thesis is to analyze the suitability of Rust language for the implementation of fault-tolerant software. Historically, C has been the most dominant language in this problem space, but Rust has numerous benefits which make it a strong candidate.
 
-This section will be focused on the implementation details of select fault tolerance techniques using FreeRTOS. For now it serves as a place for personal notes.
+\subsection{Safe by design}
+The goal of the Rust language is to eliminate the most common software bugs at the compiler level. An example of this is Rust's \textit{ownership and borrowing model} - a static code analysis done by the compiler \cite{rust_book:ownership}. It ensures memory safety of the program by explicity disallowing references to deallocated values, which prevents null pointer dereferencing, and also prevents race conditions by limiting the access to mutable variables. Rust's ownership model is a complex topic and explaning it in full is not within the scope of this thesis, more information can be found in the offical Rust book.
 
-\subsection{Rust}
-
-As previously mentioned, one of the goals of this thesis is to implement select fault tolerance techniques using the Rust programming language. Rust is particularly well suited for software implemented fault tolerance due to its emphasis on reliability and memory safety. However, it also provides other tools that make it particularly well suited for this problem, namely the macro system. Rust's macro system allows for execution of arbitrary code at the compile time, effectively allowing us to embed fault tolerance seamlessly.
-
-\subsection{Tools}
-
-Currently, testing is being done on https://github.com/lobaro/FreeRTOS-rust which is based on https://github.com/hashmismatch/freertos.rs.
-
-FreeRTOS-Rust provides framework for both compiling and running FreeRTOS from within Rust. 
-
-\begin{figure}[hbt]
-    \centering
-    \includegraphics[width=0.8\textwidth]{diagrams/screenshots/freertos-rust-build.png}
-    \caption{FreeRTOS-Rust build.rs}
-    \label{fig:freertos-rust-build}
-\end{figure}
-
-% \begin{figure}[hbt]
-%     \centering
-%     \includegraphics[width=0.8\textwidth]{diagrams/screenshots/freertos-rust-main.png}
-%     \caption{FreeRTOS-Rust main.rs}
-%     \label{fig:freertos-rust-main}
-% \end{figure}
-
-This approach appears to be promising so far, at the very least, the provided examples compile.
-\begin{figure}[hbt]
-    \centering
-    \includegraphics[width=0.8\textwidth]{diagrams/screenshots/freertos-rust-example.png}
-    \caption{FreeRTOS-Rust}
-    \label{fig:freertos-rust}
-\end{figure}
-
-Should Rust implementation prove to be impossible, I have also set up standard C-only FreeRTOS for testing:
-
-\begin{figure}[hbt]
-    \centering
-    \includegraphics[width=0.8\textwidth]{diagrams/screenshots/freertos-c-example.png}
-    \caption{FreeRTOS with standard C}
-    \label{fig:freertos-c}
-\end{figure}
-
-\subsection{Ideas}
-
-\subsubsection{CFCSS}
-
-A simplified CFCSS-like system could be created with Rusts macro features. Rust macros allow for the execution of arbitrary Rust code at compile time, this could be used to generate signatures for each function branching off of the root (marked as CFCSS\_start) and add validation logic to each of the functions.
-
+\subsection{Robust error handling}
+Another major benefit of Rust is its approach to error handling. Rust splits errors into two categories: \textit{Unrecoverable} errors immediately terminate the execution of the program using the \textit{panic!()} macro \cite{rust_book:panic}, meaning there is not much to say about them. And \textit{recoverable} errors which are return values of a function using the Result<T, E> enum \cite{rust_book:result}. Using the approach of \textit{error-as-a-value} we can determine if a function executed successfully by simply checking its return value. This can function as a very quick and rudimentary form of fault tolerance, since it can be easily applied to any function.
+\newpage
+\begin{figure}
 \begin{lstlisting}[language=Rust]
-// Checks whether the path from v0 to v1 is a valid branching
-fn validate_path(v0: u64, v1: u64) {
+fn foo() -> Result<u32, ()> {
     ...
 }
 
-#[derive(CFCSS_branch)]
-subprocess1(hash: u64)  {
-    let curr_hash = Y;
-
-    if (!validate_path(hash, curr_hash)) {
-        return Err("Unexpected branching detected.".into());
-    }
-    ...
-}
-
-#[derive(CFCSS_start)]
-fn control(flag: bool) {
-    let mut hash: u64 = X;
-
-    if flag {
-        subprocess1(hash);
-    }
-}
-
 fn main() {
-    control(true);
+    let Ok(res) = foo() else {
+        // Function did not execute properly!
+    }
 }
 \end{lstlisting}
+\caption{Rust - error as a value}
+\label{fig:rust_error}
+\end{figure}
 
-\subsubsection{Checksum on data types}
 
-Another interesting thing that could be implemented using Rusts macro system is checksum protected structs. An arbitrary struct could have a "checksum" macro derived on it, which would implement an interface for safely interacting with the underlying data. This could also double as a read/write lock to ensure thread safety.
+\subsection{Macro system}
+Rust has a powerful macro system which in essence works as a code pre-processor acting over the abstract syntax tree. Unlike C macros, which only work as direct text replacement, Rust macros allow for arbitrary modification and generation of code before the compilation step. Using Rust macros, various fault tolerance techniques can be easily implmeneted, which would be very tedious to do with a more simple macro system. An example of utilizing macros is highlighted in this very thesis, where a Control Flow Checkign using Signature Streams (CFCSS) technique is implemented using Rust macro system. 
 
+\subsection{Low-level control and C integration}
+Rust demonstrates comparable functionality to C when it comes to low-level control - example being the ability to define custom heap allocator or the ability to use in-line assembly from within Rust. Since Rust uses LLVM under the hood, its compiler is able to link against existing C code. This makes for and easy integration with existing C projects making Rust well suited as a higher level extension. This thesis demonstrates the use of Rust with FreeRTOS codebase written in C.
+
+\begin{figure}
 \begin{lstlisting}[language=Rust]
-#[derive(checksum)]
-struct Point2D {
-    x: i64,
-    y: i64,
-}
-
-fn main() {
-    let mut point = Point2D { 3.14, 2.6 };
-
-    // Performs a checksum on point before and after use, 
-    // raising an error if either detects an issue 
-    if let Err(e) = point.checked(|p: &Point2D| {
-        // Perform some operation with the point
-        ...
-    }) {
-        println!("Found checksum error: {}", e);
-    }
-
-    // Mutable access to checked point, if last check detects 
-    // an issue restores the previous point and checksums again
-    if let Err(e) = point.checked_mut(|p: &mut Point2D| {
-        // Change the point data
-        ...
-    }) {
-        println!("Found checksum error: {}", e);
-    }
+unsafe extern "C" {
+    fn puts(string: *const c_char, len: usize) -> i32;
 }
 \end{lstlisting}
-
-\subsubsection{Acceptance testing}
-
-One major benfit of Rust is its approach to errors as value. This means we can use built-in Rust tooling to easily implements things like acceptance checks, since we can pass arbitrary error message into the acceptance check.
-
-\begin{lstlisting}[language=Rust]
-fn unsafe_process(input: u64) -> Result<u64, String> {
-    if input < 5 {
-        return Err("Input cannot be less than 5".into());
-    }
-
-    Ok(input + 2)
-}
-
-fn acceptance_check(res: Result<u64, String>) 
--> Result<u64, String> 
-{
-    let output = match res {
-        Err(error) => {
-            // Handle obvious error
-            return Err(format!(
-                "Process failed with error: {}", error
-            ));
-        }
-        Ok(output) => output,
-    };
-
-    /* 
-    Perform other checks to ensure output matches 
-    our criteria that might have not been tested 
-    during output generation.
-    */
-    if output > 10 {
-        return Err("Output cannot be larger than 10".into());
-    }
-
-    Ok(output)
-}
-
-fn main() -> Result<(), String> {
-    // This will execute correctly
-    let output = acceptance_check(unsafe_process(6))?;
-    println!("Output: {}", output);
-
-    // This will fail during initial execution
-    acceptance_check(unsafe_process(2))?;
-
-    // This will fail acceptance check
-    acceptance_check(unsafe_process(9))?;
-
-    Ok(())
-}
-\end{lstlisting}
-
-\subsubsection{Data reexpression in practice}
-
-Sometimes even the order of the inputs makes a difference. An edge-case might only occur only given a very specific order of inputs, so if our process does not care about the order of processed data, simple reordering can provide basic fault tolerance.
-
-\begin{lstlisting}[language=Rust]
-use rand::seq::SliceRandom;
-use rand::thread_rng;
-
-/*
-Function to process input data, this only works
-if the function does not care about the order of the input.
-*/
-fn process_data(input: &[u64]) -> Result<bool, String> {
-    if input[0] == 0 {
-        return Err("edge-case".into());
-    }
-
-    Ok(true)
-}
-
-fn main() -> Result<(), String> {
-    let mut input: Vec<u64> = vec![0, 1, 2];
-
-    // Keep retrying the function until it succeeds
-    let output = loop {
-        match process_data(&input) {
-            Err(error) => {
-                println!("error: {}", error);
-
-                // Reshuffle input
-                input.shuffle(&mut thread_rng());
-            }
-            Ok(output) => break output,
-        }
-    };
-
-    println!("correct output: {}", output);
-
-    Ok(())
-}
-\end{lstlisting}
-
-\subsection{Personal}
-
-(This section might not be incorporated in the final thesis, but its something interesting I am keeping here for now.)
-
-I happen to be acquainted with a former NASA engineer and a current employee of Blue Origin. He is a strong proponenet of Rust being used in aerospace industry and he had the following to say about it:
-
-"The space industry has a general hesitance to adopt Rust due to perceived newness and lack of industry maturity.", however, "Rust can improve safety reliability and offer predictable performance." 
-- Spencer C. Imbleau
-
-Spencer. C. Imbleau is a member of the AeroRust group, which aims to make Rust mainstream in the aerospace industry. He pointed me towards some useful libraries which are specifically made for embedded systems. https://aerorust.org/catalogue. One particularly interesting project is Rust implemented error correction library, which does not use the standard library, and can therefore be easily integrated with FreeRTOS. \(https://docs.rs/labrador-ldpc/latest/labrador_ldpc/\)
+\caption{Rust - Using C function within Rust}
+\label{fig:rust_extern}
+\end{figure}
 
 \newpage
+
+\section{Implementation}
+
+
+
+\begin{lstlisting}[language=Rust]
+    use rand::seq::SliceRandom;
+    use rand::thread_rng;
+    
+    /_
+    Function to process input data, this only works
+    if the function does not care about the order of the input.
+    _/
+    fn process_data(input: &[u64]) -> Result<bool, String> {
+    if input[0] == 0 {
+    return Err("edge-case".into());
+    }
+    
+        Ok(true)
+    
+    }
+    
+    fn main() -> Result<(), String> {
+    let mut input: Vec<u64> = vec![0, 1, 2];
+    
+        // Keep retrying the function until it succeeds
+        let output = loop {
+            match process_data(&input) {
+                Err(error) => {
+                    println!("error: {}", error);
+    
+                    // Reshuffle input
+                    input.shuffle(&mut thread_rng());
+                }
+                Ok(output) => break output,
+            }
+        };
+    
+        println!("correct output: {}", output);
+    
+        Ok(())
+    
+    }
+    \end{lstlisting}
 
 \section{Roadmap}
 
