--- a/docs.tex
+++ b/docs.tex
@@ -356,7 +356,7 @@ fn main() {
 Rust has a powerful macro system which in essence works as a code pre-processor acting over the abstract syntax tree. Unlike C macros, which only work as direct text replacement, Rust macros allow for arbitrary modification and generation of code before the compilation step. Using Rust macros, various fault tolerance techniques can be easily implmeneted, which would be very tedious to do with a more simple macro system. An example of utilizing macros is highlighted in this very thesis, where a Control Flow Checkign using Signature Streams (CFCSS) technique is implemented using Rust macro system. 
 
 \subsection{Low-level control and C integration}
-Rust demonstrates comparable functionality to C when it comes to low-level control - example being the ability to define custom heap allocator or the ability to use in-line assembly from within Rust. Since Rust uses LLVM under the hood, its compiler is able to link against existing C code. This makes for and easy integration with existing C projects making Rust well suited as a higher level extension. This thesis demonstrates the use of Rust with FreeRTOS codebase written in C.
+Rust demonstrates comparable functionality to C when it comes to low-level control - example being the ability to define custom heap allocator or the ability to use in-line assembly from within Rust. Since Rust uses LLVM under the hood, its compiler is able to link against existing C code. This makes for an easy integration with existing C projects making Rust well suited as a higher level extension. This thesis demonstrates the use of Rust with FreeRTOS codebase written in C.
 
 \begin{figure}
 \begin{lstlisting}[language=Rust]
@@ -371,6 +371,14 @@ unsafe extern "C" {
 \newpage
 
 \section{Implementation}
+
+\subsubsection{FreeRTOS integration}
+
+\subsubsection{Checkpoint and restart}
+
+\subsubsection{CFCSS}
+
+\subsubsection{Multiversion}
 
 
 
