--- a/sources.bib
+++ b/sources.bib
@@ -153,3 +153,8 @@ Online, eBay, and dozens of others [3]%
   author = {The Rust Foundation},
   url    = {https://doc.rust-lang.org/book/ch09-02-recoverable-errors-with-result.html}
 }
+
+@misc{coast:cfcss,
+  author = {Jeffrey Goeders, Benjamin James},
+  url    = {https://coast-compiler.readthedocs.io/en/latest/cfcss.html}
+}
