--- a/docs.tex
+++ b/docs.tex
@@ -54,7 +54,9 @@ With the increasing demand for high-performance embedded software comes the inev
 
 Errors can be caused by both external factors beyond our control such as radiation in space, but also as a result of human error while designing the software. Due to the incredibly complex nature of this problem, it is unlikely that we will be designing completely error-free software and hardware in the near future. This simple fact makes fault-tolerance an important aspect of software design, especially when designing critical systems whose failure could endanger human life. However, as with most things, fault-tolerance and reliability is a trade-off, which usually comes at the cost of performance, development time and cost.
 
-This thesis will aim to analyze various commonly implemented fault-tolerance methods. We will look at the benefits and drawbacks of the utilized methods, as well as construct a working demo based on FreeRTOS that implements and tests the effectiveness of some selected methods.
+Historically, speciallized hardware was the go-to choice for implementing fault tolerance, specifically by hardening and or duplicating the components. This approach requires designing and producing non-standard PC components, exponentially increasing the development cost. Lately, a more economical solution began gaining traction, namely using off-the-shelf components without specialized hardening, while using software reduncies to implement fault tolerance for non-critical missions.
+
+This thesis will aim to analyze various common software-implemented fault-tolerance methods. We will look at the benefits and drawbacks of the utilized methods, as well as construct a working demo based on FreeRTOS running on RISC-V core that implements and tests the effectiveness of some selected methods using the Rust programming language.
 \end{abstract}
 
 \newpage
@@ -194,46 +196,6 @@ A key advantage of the recovery blocks technique is that, in most cases, the ini
 
 \break
 
-\begin{lstlisting}[language=Rust]
-// Exectutes version based on the version ID
-async fn version<T, U>(ver_id: u32, input: T) -> U {
-    ...
-}
-
-// Validates the version output based on the input
-fn acceptance_test<T, U>(input: T, output: U) -> Result<U> {
-    ...
-}
-
-// Selects a different version based on the error 
-// received from the acceptance test
-fn version_switch<E>(error: E) -> u32 {
-    ...
-}
-
-fn main() {
-    /* 
-    In a lot of cases, the input will be more complex 
-    than just a single number, so before executing the version
-    we would create a "data checkpoint" that would be restored
-    before trying a different version.
-    */
-    let input = 42;
-    let mut ver_id = 1;
-
-    let correct_result = loop {
-        match acceptance_test(input, version(ver_id, input)) {
-            Ok(output) => break output,
-            Err(error) => ver_id = version_switch(error),
-        }
-
-        if ver_id > MAX_VER {
-            panic!("No version executed successfully");
-        }
-    }
-}
-\end{lstlisting}
-
 Since errors are relatively rare compared to normal execution, this approach often achieves an optimal balance of performance and reliability. By prioritizing efficiency in the primary execution path while incorporating progressively resilient alternatives, recovery blocks can provide dependable fault tolerance without compromising system performance in typical operating conditions. This balance makes recovery blocks a practical solution for systems requiring high availability and reliability.
 
 A consideration for recovery blocks is the utilization of a single shared acceptance check for all the versions. This means that the acceptance check must be implementation agnostic and only consider the inputs and outputs of the version. Although this means easier development and potentially less opportunities for faults given less software design, it also fails to take advantage of version-specialized ways errors could be detected in theory.
@@ -253,28 +215,6 @@ This voting approach to handling errors is sometimes referred to as \textbf{faul
     \includegraphics[width=0.9\textwidth]{n_version_prog/n_version_prog.png}
     \caption{N-Version Programming}
 \end{figure}
-
-\begin{lstlisting}[language=Rust]
-async fn version<T, U>(ver_id: u32, input: T) -> U {
-    ...
-}
-
-fn selection<U>(results: Vec<U>) -> U {
-    ...
-}
-
-fn main() {
-    let input = 42; 
-    
-    let results = futures::join!(
-        version(1, input), 
-        version(2, input), 
-        version(3, input)
-    );
-
-    let correct_result = selection(results);
-}
-\end{lstlisting}
 
 The primary drawback of N-version programming is its requirement to execute all of the versions before determining the final output. This can be highly resource-intensive, especially for large or complex tasks, as it requires significant computational power and memory to run multiple versions simultaneously.
 
@@ -326,6 +266,8 @@ This category is dedicated to fault tolerance methods which do not strictly fall
 
 Another interesting example is specialized compiler which embeds fault tolerance into the software during compilation, independently of the actual software's purpose. Example of this approach is \textbf{"Control flow checking by software signature"} published in \cite{994926}.
 
+\newpage
+
 \section{Motivation for Rust}
 One of the main purposes of this thesis is to analyze the suitability of Rust language for the implementation of fault-tolerant software. Historically, C has been the most dominant language in this problem space, but Rust has numerous benefits which make it a strong candidate.
 
@@ -334,7 +276,7 @@ The goal of the Rust language is to eliminate the most common software bugs at t
 
 \subsection{Robust error handling}
 Another major benefit of Rust is its approach to error handling. Rust splits errors into two categories: \textit{Unrecoverable} errors immediately terminate the execution of the program using the \textit{panic!()} macro \cite{rust_book:panic}, meaning there is not much to say about them. And \textit{recoverable} errors which are return values of a function using the Result<T, E> enum \cite{rust_book:result}. Using the approach of \textit{error-as-a-value} we can determine if a function executed successfully by simply checking its return value. This can function as a very quick and rudimentary form of fault tolerance, since it can be easily applied to any function.
-\newpage
+
 \begin{figure}
 \begin{lstlisting}[language=Rust]
 fn foo() -> Result<u32, ()> {
@@ -343,7 +285,7 @@ fn foo() -> Result<u32, ()> {
 
 fn main() {
     let Ok(res) = foo() else {
-        // Function did not execute properly!
+        // Function returned with an error
     }
 }
 \end{lstlisting}
@@ -372,71 +314,136 @@ unsafe extern "C" {
 
 \section{Implementation}
 
-\subsubsection{FreeRTOS integration}
+Implementation section outlines 
 
-\subsubsection{Checkpoint and restart}
+\subsection{RISC-V}
 
-\subsubsection{CFCSS}
+\subsubsection{Interrupt and exception handling}
 
-\subsubsection{Multiversion}
-
-
-
+\begin{figure}
 \begin{lstlisting}[language=Rust]
-    use rand::seq::SliceRandom;
-    use rand::thread_rng;
-    
-    /_
-    Function to process input data, this only works
-    if the function does not care about the order of the input.
-    _/
-    fn process_data(input: &[u64]) -> Result<bool, String> {
-    if input[0] == 0 {
-    return Err("edge-case".into());
-    }
-    
-        Ok(true)
-    
-    }
-    
-    fn main() -> Result<(), String> {
-    let mut input: Vec<u64> = vec![0, 1, 2];
-    
-        // Keep retrying the function until it succeeds
-        let output = loop {
-            match process_data(&input) {
-                Err(error) => {
-                    println!("error: {}", error);
-    
-                    // Reshuffle input
-                    input.shuffle(&mut thread_rng());
-                }
-                Ok(output) => break output,
-            }
-        };
-    
-        println!("correct output: {}", output);
-    
-        Ok(())
-    
-    }
-    \end{lstlisting}
+#[riscv_rt::exception(Exception::InstructionFault)]
+fn instruction_fault(trap: &mut riscv_rt::TrapFrame) -> ! {
+    unsafe { return_to_checkpoint("InstructionFault") }
+}
+\end{lstlisting}
+\caption{Rust - Exception handler example}
+\label{fig:rust_exception_handler}
+\end{figure}
 
-\section{Roadmap}
+\subsection{FreeRTOS integration}
 
-\begin{enumerate}[label=\arabic*.]
-    \item \textbf{Analysis of the problem} - \textit{Done}
-    \item \textbf{Research} - \textit{Done}
-    \item \textbf{Gathering references} - \textit{Mostly Done}
-    \item \textbf{Compile relevant information and research into a document (basis for the thesis)} - \textit{Mostly Done}
-    \item \textbf{Add diagrams and code snippets} - \textit{Done}
-    \item \textbf{Select fault tolerance techniques to implement} - \textit{Mostly Done}
-    \item \textbf{Get FreeRTOS working locally} - \textit{Done}
-    \item \textbf{Implement basic application using FreeRTOS} - \textit{Started}
-    \item \textbf{Implement fault tolerance application using FreeRTOS} - \textit{Not Started}
-\end{enumerate}
+In order to integrate Rust with FreeRTOS an open-source library called FreeRTOS-Rust was used. This library provided basic... 
+
+\subsection{Checkpoint and restart}
+
+The implementation of checkpoint and restart system takes advantage of RISC-V's built in interrupt and exception handler
+
+\newpage
+\subsection{CFCSS}
+
+Unlike the usual implementation, which works over assembly instructions, or LLVM's intermediate representation (IR), our implementation takes advantage of Rust's macro system to insert CFCSS directly into program code. An algorithm originally designed for LLVM IR is used, with modifications to make it suitable for our purposes \cite{coast:cfcss}.
+
+Macro is used to designate a \textit{module} as CFCSS protected, each function within the module being designated as a \textit{block} ({$b_n$}). A graph is then generated at compile time representing the allowed control flow within the protected module. Each block within the graph is assigned a random unique signature ({$s_n$}) and signature difference ({$d_n$}), which is calculated by XORing ({$\oplus$}) the current block's signature and the signature of its predecessor.
+
+\[
+d_n = s_n \oplus s_{n-1}
+\]
+
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=1.0\textwidth]{diagrams/cfcss/basic.png}
+    \caption{Basic CFCSS}
+    \cite{coast:cfcss}
+\end{figure}
+
+A runtime signature {$G_n$} is also created for the given protected module, initially set to {$G_0 = 0$}. This signature is updated at runtime before the execution of every block by XORing it with the signature difference of the destination block. Using XOR to update the runtime signature is favorable, since XOR operation can be undone by simply being repeated, which is desirable when returning from a block.
+
+\[
+G_n = G_{n-1} \oplus d_n
+\]
+
+To ensure correct control flow, the newly calculated runtime signature must be equal to the function signature, otherwise an invalid branching occured.
+
+\[
+G_n = s_n
+\]
+
+This approach is, however, insufficient in the presence of so-called \textit{fan-in} block. If both {$b_1$} and {$b_3$} have an edge to {$b_4$} a problem arises where (provided that {$s_1 \ne s_3$}) either {$G_4 = G_1 \oplus d_4$} is true or {$G_4 = G_3 \oplus d_4$}.
+
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=0.6\textwidth]{diagrams/cfcss/adjuster.png}
+    \caption{CFCSS with fan-in block}
+    \cite{coast:cfcss}
+\end{figure}
+
+We need to introduce another constant called signature adjuster ({$D_n$}) caluclated for each predecessor of a fan-in node, and apply it while updating the runtime signature. This gives us the actual equation for updating runtime signature:
+
+\[
+G_n = G_{n-1} \oplus d_n \oplus D_n
+\]
+
+\subsubsection{Macro implementation}
+
+The Rust macro generates static variables ({$G_n, D_n, s_n, d_n$}) during compile time and inserts additional code before and after the actual function code witin the protected module. The instructions inserted after the function block are equivalent to the ones inserted before, with the exception of restoring \textit{last adjuster} from stack instead of updating and storing it.
+
+This macro can be applied as shown in figure \ref{fig:rust_cfcss_macro_example} by specifying a module as \textit{\#[cfcss\_root]}. An entry funciton is designated with a special macro \textit{\#[entry]}, this macro embeds additional instruction that reset the runtime signature and adjuster of the module, allowing for repeated call of the entry point. An entry function can only be a function that is not called from within another function in the protected module.
+
+\begin{figure}
+\begin{lstlisting}[language=Rust]
+RUNTIME_SIGNATURE ^= #dif_name;
+if is_fan_in {
+    RUNTIME_SIGNATURE ^= RUNTIME_ADJUSTER;
+}
+if #sig_name != RUNTIME_SIGNATURE {
+    return_to_checkpoint(ERROR_MSG);
+}
+// Saving previous adjuster on the stack, restored before the function returns
+let last_adjuster = RUNTIME_ADJUSTER;
+if func_has_adjuster {
+    RUNTIME_ADJUSTER = #adj_name;
+}
+\end{lstlisting}
+\caption{Rust - CFCSS instructions inserted before function block}
+\label{fig:rust_cfcss_macro}
+\end{figure}
+
+\begin{figure}
+\begin{lstlisting}[language=Rust]
+#[cfcss_root]
+pub mod protected_block {
+    #[entry]
+    pub fn entry_function() {
+        ...
+    }
+    fn function_0();
+    fn function_1();
+}
+\end{lstlisting}
+\caption{Rust - CFCSS using macros}
+\label{fig:rust_cfcss_macro_example}
+\end{figure}
+
+\subsubsection{Performance impact}
+
+Embedding new instruction during compile time will understandably have performance impact on the execution of the program. Each function will incur a execution overhead, as multiple operations and checks must be carried out before the actual function body executes. Approximately 50 additional assembly instructions are inserted before the function block and 50 more after the function block, without using any compiler optimizations.
+
+However, due to the nature of the implementation, the developer is in full control of just how much overhead is incurred. Since the number of additional instructions is constant per function definition, we can either split our protected module into fewer function to have less overhead, but at the cost of less fault-tolerance. Or we can fragment our code into as many function blocks as possible, and thereby increasing the number of control flow checks performed.
+
+\subsubsection{Considerations}
+
+Since our approach to implementing CFCSS utilizes a purely code based approach it natuarally comes with several limitations. Unlike the traditional approach, which implements CFCSS at IR level by extending the LLVM pipeline we do not have access to the underlying instructions, which limits the possible density of the control flow checks. An IR approach is able to precisely insert instructions after every branch and jump operations, and also has more granular control over the actual instructions being inserted. This means our implementation is more prone to control flow errors. Although not within the extent of this thesis, further improvements could be made by directly extending Rust's LLVM pipeline and integrating a CFCSS method at IR level.
+
+\newpage
+\subsection{Multiversion}
+
+\section{Testing}
+
+\subsection{Common errors}
+
+\subsection{Fault coverage}
 
 \newpage
 \printbibliography
-
 \end{document}
