Checkpoint and restart done, variable protection WIP

--- a/sources.bib
+++ b/sources.bib
@@ -154,6 +154,11 @@ Online, eBay, and dozens of others [3]%
   url    = {https://doc.rust-lang.org/book/ch09-02-recoverable-errors-with-result.html}
 }
 
+@misc{rust_book:error_handling,
+  author = {The Rust Foundation},
+  url    = {https://doc.rust-lang.org/book/ch09-00-error-handling.html}
+}
+
 @misc{coast:cfcss,
   author = {Jeffrey Goeders, Benjamin James},
   url    = {https://coast-compiler.readthedocs.io/en/latest/cfcss.html}
