--- a/docs.tex
+++ b/docs.tex
@@ -16,9 +16,9 @@
 \author{Filip Ďuriš}
 
 \definecolor{codegreen}{rgb}{0,0.6,0}
-\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codegray}{rgb}{0.4,0.4,0.4}
 \definecolor{codepurple}{rgb}{0.58,0,0.82}
-\definecolor{backcolour}{rgb}{0.95,0.95,0.95}
+\definecolor{backcolour}{rgb}{1,1,1}
 
 \lstdefinestyle{mystyle}{
     backgroundcolor=\color{backcolour},   
@@ -52,9 +52,9 @@
 \begin{abstract}
 With the increasing demand for high-performance embedded software comes the inevitable, difficult task of ensuring fault-free functioning of ever-more complex systems. The increased complexity, both in terms of hardware components and software features, increases the number of failure points where errors can manifest.
 
-Errors can be caused by both external factors beyond our control such as radiation in space, but also as a result of human error while designing the software. Due to the incredibly complex nature of this problem, it is unlikely that we will be designing completely error-free software and hardware in the near future. This simple fact makes fault-tolerance an important aspect of software design, especially when designing critical systems whose failure could endanger human life. However, as with most things, fault-tolerance and reliability is a trade-off, which usually comes at the cost of performance, development time and cost.
+Errors can be caused by both external factors beyond our control such as radiation in space, but also as a result of human error while designing the software. Due to the incredibly complex nature of this problem, it is unlikely that we will be designing completely error-free software and hardware in the near future. This simple fact makes fault-tolerance an important aspect of software design, especially when designing critical systems whose failure could endanger human life. However, as with most things, fault-tolerance and reliability is a trade-off, which usually comes at the cost of performance and development time.
 
-Historically, speciallized hardware was the go-to choice for implementing fault tolerance, specifically by hardening and or duplicating the components. This approach requires designing and producing non-standard PC components, exponentially increasing the development cost. Lately, a more economical solution began gaining traction, namely using off-the-shelf components without specialized hardening, while using software reduncies to implement fault tolerance for non-critical missions.
+Historically, speciallized hardware was the go-to choice for implementing fault tolerance, specifically by hardening and or duplicating the components. This approach requires designing and producing non-standard computure components, exponentially increasing the development cost. Lately, a more economical solution began gaining traction for non-critical missions. Namely, using off-the-shelf components without specialized hardening, while using software reduncies to implement fault tolerance.
 
 This thesis will aim to analyze various common software-implemented fault-tolerance methods. We will look at the benefits and drawbacks of the utilized methods, as well as construct a working demo based on FreeRTOS running on RISC-V core that implements and tests the effectiveness of some selected methods using the Rust programming language.
 \end{abstract}
@@ -104,8 +104,7 @@ Development faults is a category which includes all the various faults whose cau
 \begin{figure}[hbt]
     \centering
     \includegraphics[width=0.7\textwidth]{diagrams/stats/piechart.png}
-    \caption{Causes of errors}
-    \cite{nasa:stats}
+    \caption{Causes of errors \cite{nasa:stats}}
 \end{figure}
 
 To ensure that software remains robust and as free of errors as possible, there are several effective strategies. One promising approach we will look at is the use of memory-safe programming languages, specifically Rust. Rust is a modern language that has gained traction for its safety features, particularly in system programming and embedded applications. It ensures high performance through zero-cost abstractions and introduces a memory ownership model, which reduces memory-related errors such as null pointer dereferencing and data races. This model makes Rust particularly well-suited for low-level and resource-constrained environments, where reliable memory management is crucial. (https://docs.rust-embedded.org/book/) \\
@@ -275,14 +274,13 @@ One of the main purposes of this thesis is to analyze the suitability of Rust la
 The goal of the Rust language is to eliminate the most common software bugs at the compiler level. An example of this is Rust's \textit{ownership and borrowing model} - a static code analysis done by the compiler \cite{rust_book:ownership}. It ensures memory safety of the program by explicity disallowing references to deallocated values, which prevents null pointer dereferencing, and also prevents race conditions by limiting the access to mutable variables. Rust's ownership model is a complex topic and explaning it in full is not within the scope of this thesis, more information can be found in the offical Rust book.
 
 \subsection{Robust error handling}
-Another major benefit of Rust is its approach to error handling. Rust splits errors into two categories: \textit{Unrecoverable} errors immediately terminate the execution of the program using the \textit{panic!()} macro \cite{rust_book:panic}, meaning there is not much to say about them. And \textit{recoverable} errors which are return values of a function using the Result<T, E> enum \cite{rust_book:result}. Using the approach of \textit{error-as-a-value} we can determine if a function executed successfully by simply checking its return value. This can function as a very quick and rudimentary form of fault tolerance, since it can be easily applied to any function.
+Another major benefit of Rust is its approach to error handling. Rust splits errors into two categories: \textit{Unrecoverable} errors immediately terminate the execution of the program using the \textit{panic!()} macro and \textit{recoverable} errors which are return values of a function using the Result enum \cite{rust_book:error_handling}.
 
-\begin{figure}
+\begin{figure}[!h]
 \begin{lstlisting}[language=Rust]
 fn foo() -> Result<u32, ()> {
     ...
 }
-
 fn main() {
     let Ok(res) = foo() else {
         // Function returned with an error
@@ -293,14 +291,15 @@ fn main() {
 \label{fig:rust_error}
 \end{figure}
 
+Using the approach of \textit{error-as-a-value} we can determine if a function executed successfully by simply checking its return value (see figure \ref{fig:rust_error}). This can act as a very quick and rudimentary form of fault tolerance, since it can be easily applied to any function.
 
 \subsection{Macro system}
-Rust has a powerful macro system which in essence works as a code pre-processor acting over the abstract syntax tree. Unlike C macros, which only work as direct text replacement, Rust macros allow for arbitrary modification and generation of code before the compilation step. Using Rust macros, various fault tolerance techniques can be easily implmeneted, which would be very tedious to do with a more simple macro system. An example of utilizing macros is highlighted in this very thesis, where a Control Flow Checkign using Signature Streams (CFCSS) technique is implemented using Rust macro system. 
+Rust has a powerful macro system which in essence works as a code pre-processor acting over the abstract syntax tree. Unlike C macros, which only work as direct text replacement, Rust macros allow for arbitrary modification and generation of code before the compilation step. Using Rust macros, various fault tolerance techniques can be implmeneted. An example of utilizing macros is highlighted in this very thesis, where a Control Flow Checkign using Signature Streams (CFCSS) technique is implemented using Rust macro system. 
 
 \subsection{Low-level control and C integration}
-Rust demonstrates comparable functionality to C when it comes to low-level control - example being the ability to define custom heap allocator or the ability to use in-line assembly from within Rust. Since Rust uses LLVM under the hood, its compiler is able to link against existing C code. This makes for an easy integration with existing C projects making Rust well suited as a higher level extension. This thesis demonstrates the use of Rust with FreeRTOS codebase written in C.
+Rust demonstrates comparable functionality to C when it comes to low-level control - example being the ability to define custom heap allocator or the ability to use in-line assembly from within Rust. Since Rust uses LLVM under the hood, its compiler is able to link against existing C code. We can also easily use C functions within Rust by declaring the function signature (see figure \ref{fig:rust_extern}). This makes for an easy integration with existing C projects making Rust well suited as a higher level extension. This thesis demonstrates the use of Rust with FreeRTOS codebase written in C.
 
-\begin{figure}
+\begin{figure}[!h]
 \begin{lstlisting}[language=Rust]
 unsafe extern "C" {
     fn puts(string: *const c_char, len: usize) -> i32;
@@ -318,7 +317,7 @@ Implementation section outlines
 
 \subsection{RISC-V}
 
-\subsubsection{Interrupt and exception handling}
+\subsubsection{Interrupt and exception handling} \label{sec:riscv_exception_handling}
 
 \begin{figure}
 \begin{lstlisting}[language=Rust]
@@ -335,93 +334,188 @@ fn instruction_fault(trap: &mut riscv_rt::TrapFrame) -> ! {
 
 In order to integrate Rust with FreeRTOS an open-source library called FreeRTOS-Rust was used. This library provided basic... 
 
+\clearpage
+
 \subsection{Checkpoint and restart}
 
-The implementation of checkpoint and restart system takes advantage of RISC-V's built in interrupt and exception handler
+Checkpoint and restart system is the backbone of our fault-tolernace framework. It can be used on its own to provide basic level of redundancy, or it can be combined with other techniques to boost their fualt-tolerance potential. A lot of other methods, namely ones outlined in the Multiversion section use checkpoint and restart at their core.
 
-\newpage
+\subsubsection{Creating a checkpoint} \label{sec:creating_checkpoint}
+
+Checkpoint is generated by creating a \textit{checkpoint context} during which the current state of the application is stored. Namely, the general purpose registers (x0 - x31 in RISCV) are stored into a static memory location before the execution of a \textit{checkpoint block} (the part of code protected by the checkpoint). Additionally, a return address is stored along with the general purpose registers. Higher-level programming languages do not directly provide the functionality to manipulate register values. This means assembly instructions have to be used to facilitate the low level access as seen in figure \ref{fig:rust_create_checkpoint}.
+
+\begin{figure}[!h]
+\begin{lstlisting}[language=Rust]
+asm!(
+    // Storing registers in a static variable
+    "lui   t0, %hi(CHECKPOINT)",
+    "addi  t0, t0, %lo(CHECKPOINT)",
+    "sw x1,   4(t0)",
+    "sw x2,   8(t0)",
+    ...
+    // Setting return address to the instruction following this function call
+    "call set_checkpoint",
+
+    // Restoring registers to their previous state
+    "lui   t0, %hi(CHECKPOINT)",
+    "addi  t0, t0, %lo(CHECKPOINT)",
+    "lw x1,   4(t0)",
+    "lw x2,   8(t0)",
+    ...
+)
+\end{lstlisting}
+\caption{Rust - Creating checkpoint}
+\label{fig:rust_create_checkpoint}
+\end{figure}
+
+In order to set the return address, we utilize a trick (shown in figure \ref{fig:rust_set_checkpoint}) whereby calling a function we now have access to the instruction immediatelly following the function call (figure \ref{fig:rust_create_checkpoint} line 12) saved in the return address register (RA). We store the value of this register along with the registers in the checkpoint variable.
+
+\begin{figure}[!h]
+\begin{lstlisting}[language=Rust]
+fn set_checkpoint() {
+    unsafe {
+        asm!(
+            "sw ra, ({0})",
+            in(reg) &(CHECKPOINT.ret_addr),
+        );
+    }
+}
+\end{lstlisting}
+\caption{Rust - Set checkpoint}
+\label{fig:rust_set_checkpoint}
+\end{figure}
+
+\subsubsection{Storing the checkpoint}
+
+As mentioned in section \ref{sec:creating_checkpoint}, the checkpoint information is stored in a static memory location. This might seem as an arbitrary decision given that storing the checkpoint on the stack or the heap are also an option. Each of the listed approaches comes with its own issues. Using a static memory location limits the number of checkpoints that can be stored. Using the stack for checkpoint storage can be very unreliable as stack corruption can easily occur should the stack pointer manifest a fault. And using the heap is generally slow and prone to error stemming from pointer corruption or premature memory freeing which could occur in the prsence of faults.
+
+Our implementation uses a hybrid approach of using a static memory location for the storage of the \textit{primary checkpoint} (the last checkpoint that was set), while pushing any older checkpoints on the stack. This heightens the chance that at least the primary checkpoint will be available. Once the primary checkpoint context ends, the previous checkpoint is popped from the stack and can be used again. This allows for infite nesting of checkpoints, provided we have enough memory.
+
+\subsubsection{Returning to the checkpoint}
+
+After setting the checkpoint, the program execution continues as per usual, until either the checkpoint block finishes successfuly, or an error is detected. An error can be detected in two way, an exception is detected by the processor, or an error is detected via checks inserted into the checkpoint block.
+
+If the processor detects an error the exception handler subroutine outlined in section \ref{sec:riscv_exception_handling} is triggered. Stack pointer is restored to the pre-checkpoint block state and the program jumps back to the saved return address.
+
+If an error is detected via checks inserted by the programmer, checkpoint restart can be triggered by simply returning an error (Err()) from within the checkpoint block.
+
+Both forms of error detection and returning to checkpoint result in the restoration of the program context to the program state in which the checkpoint function was called. After the context was restored, checkpoint block will be attempted again if retries are allowed, otherwise the entire checkpoint context returns an erroneous value.
+
+\begin{figure}[!h]
+\begin{lstlisting}[language=Rust]
+if let Err(Error::MaxRetriesReached(n)) = checkpoint(2, || {
+    // Checkpoint block here
+    ...
+    Ok(())
+}) {
+    println(&format!("Max retries reached: {}", n));
+}
+\end{lstlisting}
+\caption{Rust - Using the checkpoint system}
+\label{fig:rust_using_checkpoint}
+\end{figure}
+
+\subsubsection{Performance impact}
+
+The implemented checkpoint system incurs minimal instruction overhead. Additional instructions are only inserted when creating the checkpoint context and just before the end of the checkpoint context. This comes out to 79 additional instructions to save and restore program state, plus approximately 300 instructions to save and restore old checkpoint and perform various error checks, without factoring in any compiler optimizations.
+
+This overhead is constant for the entire checkpoint block, irrespective of the checkpoint block size. As such, the ratio of overhead instructions to the checkpoint block instructions is solely determined by the size of the protected checkpoint block.
+
+\subsubsection{Considerations}
+
+Checkpoint system only facilitates basic restart and retry functionality. It can be used on its own when only basic level of protection is required, however, in most cases, checkpoint and restart system is meant to be used as a framework to build upon. Namely, the multi-version techniques outlined in later sections all use checkpoints to implement version switching.
+
+Our implmenetation of the checkpoint and restart system only saves the minimal required state, which in the case of RISC-V, is the general registers. This limits the use of the checkpoint system as other memory regions such as stack or heap are not stored. Careful consideration needs to be given to the code block protected by the checkpoint context. If the checkpoint body has any side-effects, such as modifying global variables, variables outside of the checkpoint block scope or writing to heap, these alterations will not be reversed in the case of an error and subsequent checkpoint return.
+
+This problem can be avoided by explicitly creating a copy of any outside variable which needs to be modified within the checkpoint block. The copy will then be used within the checkpoint block and the original variable will only be overrided if the checkpoint context returns successfully. More on this in section \ref{sec:var_protection}.
+
+Another important thing to mention is that our implementation does not save registers other than the general purpose registers. This means special registers such as \textit{mtvec}, \textit{mcause} or \textit{mstatus} are not protected by the checkpoint system. The fault-insertion simulation does not insert faults into these registers, as such their directly protection is not needed. However, errors can still manifest (as if they occuerd in the special registers) in ALU after the special registers are read for processing.
+
+\clearpage
+
 \subsection{CFCSS}
 
 Unlike the usual implementation, which works over assembly instructions, or LLVM's intermediate representation (IR), our implementation takes advantage of Rust's macro system to insert CFCSS directly into program code. An algorithm originally designed for LLVM IR is used, with modifications to make it suitable for our purposes \cite{coast:cfcss}.
 
-Macro is used to designate a \textit{module} as CFCSS protected, each function within the module being designated as a \textit{block} ({$b_n$}). A graph is then generated at compile time representing the allowed control flow within the protected module. Each block within the graph is assigned a random unique signature ({$s_n$}) and signature difference ({$d_n$}), which is calculated by XORing ({$\oplus$}) the current block's signature and the signature of its predecessor.
+Macro is used to designate a \textit{module} as CFCSS protected, each function within the module being designated as a \textit{block} ({$b_n$}). A graph is then generated at compile time representing the allowed control flow within the protected module. Each block within the graph is assigned a random unique signature ({$s_n$}) and signature difference ({$d_n$}), which is calculated by XORing ({$\oplus$}) the current block's signature and the signature of its predecessor as seen in equation \ref{eq:block_diff}.
 
-\[
+\begin{equation}
 d_n = s_n \oplus s_{n-1}
-\]
+\label{eq:block_diff}
+\end{equation}
 
-\begin{figure}[hbt]
+\begin{figure}[!h]
     \centering
     \includegraphics[width=1.0\textwidth]{diagrams/cfcss/basic.png}
-    \caption{Basic CFCSS}
-    \cite{coast:cfcss}
+    \caption{Basic CFCSS \cite{coast:cfcss}}
 \end{figure}
 
-A runtime signature {$G_n$} is also created for the given protected module, initially set to {$G_0 = 0$}. This signature is updated at runtime before the execution of every block by XORing it with the signature difference of the destination block. Using XOR to update the runtime signature is favorable, since XOR operation can be undone by simply being repeated, which is desirable when returning from a block.
+A runtime signature {$G_n$} is also created for the given protected module, initially set to {$G_0 = 0$}. This signature is updated at runtime before the execution of every block by XORing it with the signature difference of the destination block (equation \ref{eq:runtime_sig}). Using XOR to update the runtime signature is favorable, since XOR operation can be undone by simply being repeated, which is desirable when returning from a block.
 
-\[
+\begin{equation}
+\label{eq:runtime_sig}
 G_n = G_{n-1} \oplus d_n
-\]
+\end{equation}
 
 To ensure correct control flow, the newly calculated runtime signature must be equal to the function signature, otherwise an invalid branching occured.
 
-\[
+\begin{equation}
+\label{eq:sig_check}
 G_n = s_n
-\]
+\end{equation}
 
 This approach is, however, insufficient in the presence of so-called \textit{fan-in} block. If both {$b_1$} and {$b_3$} have an edge to {$b_4$} a problem arises where (provided that {$s_1 \ne s_3$}) either {$G_4 = G_1 \oplus d_4$} is true or {$G_4 = G_3 \oplus d_4$}.
 
-\begin{figure}[hbt]
+\begin{figure}[!h]
     \centering
     \includegraphics[width=0.6\textwidth]{diagrams/cfcss/adjuster.png}
-    \caption{CFCSS with fan-in block}
-    \cite{coast:cfcss}
+    \caption{CFCSS with fan-in block \cite{coast:cfcss}}
 \end{figure}
 
-We need to introduce another constant called signature adjuster ({$D_n$}) caluclated for each predecessor of a fan-in node, and apply it while updating the runtime signature. This gives us the actual equation for updating runtime signature:
+We need to introduce another constant called signature adjuster ({$D_n$}) caluclated for each predecessor of a fan-in node, and apply it while updating the runtime signature. This gives us the actual equation (\ref{eq:runtime_sig_with_adj}) for updating runtime signature.
 
-\[
+\begin{equation}
+\label{eq:runtime_sig_with_adj}
 G_n = G_{n-1} \oplus d_n \oplus D_n
-\]
+\end{equation}
 
 \subsubsection{Macro implementation}
 
-The Rust macro generates static variables ({$G_n, D_n, s_n, d_n$}) during compile time and inserts additional code before and after the actual function code witin the protected module. The instructions inserted after the function block are equivalent to the ones inserted before, with the exception of restoring \textit{last adjuster} from stack instead of updating and storing it.
+The Rust macro generates static variables ({$G_n, D_n, s_n, d_n$}) during compile time and inserts additional code before and after the actual function code witin the protected module (see figure \ref{fig:rust_cfcss_macro}). The instructions inserted after the function block are equivalent to the ones inserted before, with the exception of restoring \textit{last adjuster} from stack instead of updating and storing it.
+
+\begin{figure}[!h]
+    \begin{lstlisting}[language=Rust]
+    RUNTIME_SIGNATURE ^= #dif_name;
+    if is_fan_in {
+        RUNTIME_SIGNATURE ^= RUNTIME_ADJUSTER;
+    }
+    if #sig_name != RUNTIME_SIGNATURE {
+        return_to_checkpoint(ERROR_MSG);
+    }
+    if func_has_adjuster {
+        RUNTIME_ADJUSTER = #adj_name;
+    }
+    \end{lstlisting}
+    \caption{Rust - CFCSS instructions inserted before function block}
+    \label{fig:rust_cfcss_macro}
+    \end{figure}
 
 This macro can be applied as shown in figure \ref{fig:rust_cfcss_macro_example} by specifying a module as \textit{\#[cfcss\_root]}. An entry funciton is designated with a special macro \textit{\#[entry]}, this macro embeds additional instruction that reset the runtime signature and adjuster of the module, allowing for repeated call of the entry point. An entry function can only be a function that is not called from within another function in the protected module.
 
-\begin{figure}
-\begin{lstlisting}[language=Rust]
-RUNTIME_SIGNATURE ^= #dif_name;
-if is_fan_in {
-    RUNTIME_SIGNATURE ^= RUNTIME_ADJUSTER;
-}
-if #sig_name != RUNTIME_SIGNATURE {
-    return_to_checkpoint(ERROR_MSG);
-}
-// Saving previous adjuster on the stack, restored before the function returns
-let last_adjuster = RUNTIME_ADJUSTER;
-if func_has_adjuster {
-    RUNTIME_ADJUSTER = #adj_name;
-}
-\end{lstlisting}
-\caption{Rust - CFCSS instructions inserted before function block}
-\label{fig:rust_cfcss_macro}
-\end{figure}
-
-\begin{figure}
+\begin{figure}[!h]
 \begin{lstlisting}[language=Rust]
 #[cfcss_root]
 pub mod protected_block {
-    #[entry]
-    pub fn entry_function() {
-        ...
-    }
     fn function_0();
     fn function_1();
+    #[entry]
+    pub fn entry_function() {
+        function_0();
+        function_1();
+    }
 }
 \end{lstlisting}
-\caption{Rust - CFCSS using macros}
+\caption{Rust - Using the CFCSS macro}
 \label{fig:rust_cfcss_macro_example}
 \end{figure}
 
@@ -433,9 +527,68 @@ However, due to the nature of the implementation, the developer is in full contr
 
 \subsubsection{Considerations}
 
-Since our approach to implementing CFCSS utilizes a purely code based approach it natuarally comes with several limitations. Unlike the traditional approach, which implements CFCSS at IR level by extending the LLVM pipeline we do not have access to the underlying instructions, which limits the possible density of the control flow checks. An IR approach is able to precisely insert instructions after every branch and jump operations, and also has more granular control over the actual instructions being inserted. This means our implementation is more prone to control flow errors. Although not within the extent of this thesis, further improvements could be made by directly extending Rust's LLVM pipeline and integrating a CFCSS method at IR level.
+Since our implementation of CFCSS utilizes a purely code based approach it natuarally comes with several limitations. Unlike the traditional approach, which implements CFCSS at IR level by extending the LLVM pipeline we do not have access to the underlying instructions, which limits the possible density of the control flow checks. An IR approach is able to precisely insert instructions after every branch and jump operations, and also has more granular control over the actual instructions being inserted. This means our implementation is more prone to control flow errors. Although not within the extent of this thesis, further improvements could be made by directly extending Rust's LLVM pipeline and integrating a CFCSS method at IR level.
 
-\newpage
+\clearpage
+\subsection{Protection of variables} \label{sec:var_protection}
+
+Various unforseeable circumstances can lead to the corruption of program variables, from direct corruption of registers storing the variables to indirect side-effect stemming from errors within function that work with said variables. This section focuses on various techniques implemented to ensure the reliability of critical program variables with variying degree of protection depending on the use case.
+
+\subsubsection{Copy and commit}
+
+Copy and commit is a method inspired by a common practice in database transaction handling, where a temporary copy of the data is modified, and changes are only applied to the original data upon an explicit commit. This pattern is particularly useful when modifications must be validated or selectively applied, reducing the risk of unintended side effects. In the Rust example shown in Figure~\ref{fig:rust_copy_commit}, a CopyCommit wrapper is used to hold a temporary copy of the value. Inside the bar function, the value is incremented, but the change only takes effect on the original data when commit() is called. This allows for greater control over when and how mutations are finalized.
+
+\begin{figure}[!h]
+\begin{lstlisting}[language=Rust]
+fn bar(mut a: CopyCommit<u32>) {
+    *a += 1;
+    a.commit();
+}
+
+fn foo() {
+    let mut a = 1;
+    bar(CopyCommit::new(&mut a));
+}
+\end{lstlisting}
+\caption{Rust - Copy and commit example}
+\label{fig:rust_copy_commit}
+\end{figure}
+
+While this method gives us more control over when variables are modified and helps prevent unwanted side-effects, it inherently does not provide any fault tolerance against direct corruption of variables. As such, it should only be reserved for non-critical parts of the program, and or combined with other variable protection techniques.
+
+\subsubsection{Multiple redundant variables}
+
+Another way we can secure a variable is creating multiple copies of it and applying any modification to all the copies. The modified copies are then copared against each other to detect any mismatch. With two copies of a variable, we can detect an error but cannot correct it, since we cannot tell which one of the copies is faulty. With three copies, we can detect an error but also perform correction, if at least two copies of the variable are equal. The more copies we create the more likely we are to have a majority of the variables be equal, therefore the more confident we can be in our fault-tolerance.
+
+\begin{figure}[!h]
+\begin{lstlisting}[language=Rust]
+// Creates 3 identical copies
+let mut a = MultiVar::new(0);
+
+// Applies the edit function to each of the copies and performs equality check
+if let Err(e) = a.edit(|ptr_a| {
+    *ptr_a += 1;
+}) {
+    // Error while updating variable
+    ...
+}
+\end{lstlisting}
+\caption{Rust - Multiple variable redundancy}
+\label{fig:multivar}
+\end{figure}
+
+In our implementation, a MultiVar wrapper around a variable is used to automatically instantiate three separate copies of the variable as seen in Figure \ref{fig:multivar}. By calling the edit function on the wrapper, we map any modification to all the copies of the variable. The edit function also includes an internal checks which tries to correct the variables in a case of a mismatch. If correction is not possible this function returns an error.
+
+\subsubsection{Checksum}
+
+Checksum is a technique to ensure a long-lived variable has not been corrupted during the execution of the program. If we need to store a variable for prolonged amount of time we can store a checksum along with it. The checksum is calculated by splitting the stored data into chunks of 32-bits each and XORing these chunks with one another, thereby generating an unique signature.
+
+Every time the protected variable is modified the checksum is updated by recalcuating the signature. Before the variable data is read again at a later point in the program, a checksum is recalculated and compared with the stored checkum. If the checksums match the variable has not been changed since the last proper modification. In the case of a checksum mistmatch, however, the variable is likely to have been unexpected modified or directly corrupted.
+
+This technique is best utlized for global variables, since they live for the duration of the program and their correctness is paramount for the correct application functioning. 
+
+
+\clearpage
 \subsection{Multiversion}
 
 \section{Testing}
