--- a/sources.bib
+++ b/sources.bib
@@ -55,7 +55,7 @@ thus cause incorrect program execution.%
 interfered with cache memories and caused crashes in
 server systems at major customer sites, including America
 Online, eBay, and dozens of others [3]%
-@inproceedings{1402092,
+@inproceedings{swift,
   author    = {Reis, G.A. and Chang, J. and Vachharajani, N. and Rangan, R. and August, D.I.},
   booktitle = {International Symposium on Code Generation and Optimization},
   title     = {SWIFT: software implemented fault tolerance},
@@ -162,4 +162,16 @@ Online, eBay, and dozens of others [3]%
 @misc{coast:cfcss,
   author = {Jeffrey Goeders, Benjamin James},
   url    = {https://coast-compiler.readthedocs.io/en/latest/cfcss.html}
+}
+
+@article{eddi,
+  author   = {Oh, N. and Shirvani, P.P. and McCluskey, E.J.},
+  journal  = {IEEE Transactions on Reliability},
+  title    = {Error detection by duplicated instructions in super-scalar processors},
+  year     = {2002},
+  volume   = {51},
+  number   = {1},
+  pages    = {63-75},
+  keywords = {Hardware;Fault detection;Computer errors;Single event upset;Event detection;Parallel processing;Error correction;Computer architecture;Redundancy;Registers},
+  doi      = {10.1109/24.994913}
 }
