--- a/docs.tex
+++ b/docs.tex
@@ -7,6 +7,7 @@
 \usepackage{enumitem}
 \usepackage{pdfpages}
 \usepackage{listings, listings-rust}
+
 \graphicspath{{diagrams/}}
 \addbibresource{sources.bib}
 
@@ -41,10 +42,22 @@
 
 \lstset{style=mystyle}
 
+% SETTINGS - NAMES
+\newcommand{\myTitle}[0] {Software-implemented fault tolerance}
+\newcommand{\myName}[0] {Filip Ďuriš}
+\newcommand{\mySupervisor}[0] {Ing. Ján Mach}
+\newcommand{\myEvidenceNumber}[0] {FIIT-100241-117028}
+\newcommand{\myDate}[0] {Máj 2025}
+\newcommand{\myStudyProgram}[0] {Informatics}
+\newcommand{\myDegreeCourse}[0] {9.2.5 Software Engineering}
+\newcommand{\myInstitute}[0] {Institute of Informatics and Software Engineering, FIIT STU, Bratislava}
+
 \begin{document}
 
 \includepdf[pages={1}]{front_page.pdf}
 \newpage
+
+\input{src/annotation}
 
 \tableofcontents
 \newpage
@@ -53,34 +66,34 @@
 \newpage
 
 \input{src/nomenclature}
+
+\input{src/requirements}
+\newpage
+
+\input{src/rust_motivation}
+\newpage
+
 \input{src/types_of_faults}
 
-\clearpage
-\section{Analysis}
+\section{Fault-tolerance techniques}
+
+This section focuses on the analysis and comparison of theoretical aspects of fault-tolerance, notes certain methods that were already implmenented and tested in practice and outlines methods chosen for our own implementation.
 
 \input{src/analysis/single_version}
 \input{src/analysis/multi_version}
 \input{src/analysis/data_diversity}
-
-\subsection{Miscellaneous}
-(Name is subject to change.)
-This category is dedicated to fault tolerance methods which do not strictly fall into any of the aforementioned categories but are still worth consideration.
-
-\textbf{Framework} can be considered any fault tolerance technique which instead of aiming to directly create fault tolerant software provides a wrapper or tooling to help create fault tolerant software. Benefit of frameworks is the fact that the software developers do not have to concern themselves with fault tolerance, since the overarching framework is responsible for that. Example might be an OS designed to be fault tolerant.
-
-Another interesting example is specialized compiler which embeds fault tolerance into the software during compilation, independently of the actual software's purpose. Example of this approach is \textbf{"Control flow checking by software signature"} published in \cite{994926}.
+\input{src/analysis/prior_work}
+\input{src/analysis/chosen_methods}
 
 \clearpage
-\input{src/rust_motivation}
-\newpage
+
+\input{src/environment}
+\clearpage
 
 \clearpage
 \section{Implementation}
 
-The implementation section outlines some selected methods which were implemented using Rust and FreeRTOS and tested on a RISC-V core simulation. The implemented methods were modified to make them fasible to implement in a high level language. Some examples of the implementation code are also provided where fitting.
-
-\input{src/implementation/environment}
-\clearpage
+The implementation section outlines some selected methods which were implemented using Rust and FreeRTOS and tested on a RISC-V core simulation. The implemented methods were modified to make them fasible to implement in a high level language.
 
 \input{src/implementation/checkpoint}
 \clearpage
@@ -93,47 +106,8 @@ The implementation section outlines some selected methods which were implemented
 
 \input{src/implementation/multiversion}
 
-\section{Testing}
-
-Testing of the implementation was done on a custom RISC-V core (1MB RAM, 8KB stack, 8KB heap) simulation with the ability to statically insert faults during runtime of the program. The frequency of the fault insertion as well as the memory regions where fault are inserted can be changed to simulate different environments and circumstances. For the purpose of narrowing down the scope of the thesis, faults were only inserted in the following memory regions:
-
-\textbf{General Purpose Registers} (GPR)
-Registers used for general computation or temporary storage during instruction execution.
-
-\textbf{Register File Control} (RFC)
-Controls access to the register file; involved in reading/writing registers.
-
-\textbf{Predicate Registers} (PRED)
-Used in prediction of conditional execution (error inserted here should not actually have any impact on the program functioning, as the prediction logic is assumed to be possibly innacurate by design).
-
-\textbf{Arithmetic Logic Unit} (ALU)
-The part of the CPU that performs arithmetic and logical operations.
-
-\textbf{Multiply-Divide Unit} (MDU)
-Specialized unit for performing multiplication and division operations.
-
-\textbf{Data Path} (DP)
-The part of the CPU where data is processed, including registers, ALUs, and buses.
-
-\textbf{Trap Interrupt Registers} (TP)
-Handles traps (exceptions) and interrupts in the CPU.
-
-Notably, RAM was exempt from fault insertions during our testing. Should a non-transient error occur in the part of RAM which holds the program instructions there would be no way to properly recover from it using software-only fault tolerance. Usually, RAM and CPU duplication is used, effectively running the same program twice in parallel with set synchronization points. This method is outside of the scope of software implemented fault tolerance.
-
-The methods outlined in the implementation section, however, are in theory capable of detecting and recovering from certain faults in RAM. As mentioned in section \ref{sec:checksum}, checksums are capable of detecting corruption in variables, this includes variables stored in the RAM. Similarly, using multiversion programming can provide tolerance even in the case of non-transient error occuring in one of the versions. Due to general unreliability of this approach, however, the testing on RAM fault insertions was not conducted.
-
-\subsection{Common errors}
-
-Despite the fact that the timing and location of error manifestation is unpredictable, most errors usually result in similar program states. We can check for the occurence of these states to determine what kind of error we are dealing with.
-
-\subsubsection{Exception}
-
-\subsubsection{Infinite loop}
-
-\subsubsection{}
-
-
-\subsection{Fault coverage}
+\clearpage
+\input{src/testing}
 
 \clearpage
 \section{Conclusion}
@@ -145,3 +119,4 @@ Despite the fact that the timing and location of error manifestation is unpredic
 \newpage
 \printbibliography
 \end{document}
+
