--- a/src/analysis/data_diversity.tex
+++ b/src/analysis/data_diversity.tex
@@ -1,4 +1,4 @@
-subsection{Data Diversity}
+\subsection{Data Diversity}
 
 Faults within the data are the second largest cause of errors \cite{nasa:stats}, with that in mind, it is sometimes not enough to execute different version of a software on the same data in order to get an acceptable output. Instead, data diversity might be required to ensure correct execution. Data diversity is an orthogonal method to the previously mentioned design diversity methods. It can be used on its own, or in combination with other fault tolerance methods.
 
@@ -10,9 +10,9 @@ In many situations only very conditions will result in an error, we call these s
 
 Data reexpression is generation of logically equivalent data sets. Any mapping of a program's data that preserves the information content of the data is a valid reexpression algorithm. A simple approximate data reexpression algorithm for a floating-point quantity might alter its value by a small percentage. The allowable percentage by which the data value could be altered would be determined by the application. In applications that process sensor data, for example, the accuracy of the data is often poor and deliberate small changes are unlikely to affect performance. \cite{nasa:datadiversity}
 
-\begin{figure}[hbt]
-    \centering
-    \includegraphics[width=0.7\textwidth]{diagrams/data_div/reexpress.png}
-    \caption{Data Reexpression}
-    \label{fig:data_rex}
-\end{figure}
+% \begin{figure}[hbt]
+%     \centering
+%     \includegraphics[width=0.7\textwidth]{diagrams/data_div/reexpress.png}
+%     \caption{Data Reexpression}
+%     \label{fig:data_rex}
+% \end{figure}
