--- a/src/analysis/single_version.tex
+++ b/src/analysis/single_version.tex
@@ -1,34 +1,49 @@
 
-\subsection{Single version} \label{single}
+\subsection{Single-version} \label{single}
 
-Single version is a category of techniques which focus on creating a singular, robust implementation of software by integrating safety checks and redundancies directly into the software design process.
+Single-version is a category of techniques which focus on creating a singular, robust implementation of software by integrating safety checks and redundancies directly into the software design process.
 
 This technique emphasizes the detection of errors within the software and the ability to recover from them. Error detection typically involves monitoring the system for unexpected behaviors or inconsistencies, which could signal the presence of a fault. Recovery mechanisms then act to mitigate the effects of these faults.
 
-Handling an error can be done in various ways. Most common would be to backtrack to a saved checkpoint and retry the part of the application where an error was discovered in the hopes of getting the correct result on the subsequent retries. This usually works well with transient faults, but it is likely to fail in the presence of a solid fault \cite{1402092}. 
+Handling an error can be done in various ways. Most common would be to backtrack to a saved checkpoint and retry the part of the application where an error was discovered in the hopes of getting the correct result on the subsequent retries. This usually works well with transient faults, but it is likely to fail in the presence of a solid fault.
 
-Drawbacks of single version techniques are primarily the lack of alternatives and fallbacks, should the version fail. Single-version techniques heavily rely on error detection and recovery, which might not always work in practice. The reason single-version techniques are viable is an observation that transient errors are way more common than solid errors \cite{1676899}, meaning that single-version is sometimes enough for noncritical parts of the system.
+Drawbacks of single version techniques are primarily the lack of alternatives and fallbacks, should the program fail. Single-version techniques heavily rely on error detection and recovery, which might not always work in practice. The reason single-version techniques are viable is an observation that transient errors are way more common than solid errors \cite{1676899}, meaning that single-version is usually enough for noncritical parts of the system.
 
 \subsubsection{Modularity}
 
-Perhaps the simplest way we can create a more resilient software is to structure it into independent modules. Each module should handle one task and, when possible, not directly rely upon any other modules for its functionality, or be relied upon by other modules.
+Perhaps the simplest way we can create a more resilient software is to structure it into independent modules. Each module should handle one task and, when possible, not directly rely upon any other modules for its functionality.
 
 A technique commonly utilized to achieve modularity is partitioning, which can be divided into horizontal and vertical partitioning. Horizontal partitioning aims to split the software into independent structural branches communicating through interfaces. 
 Vertical partitioning splits the software in a top-down fashion, where higher level modules are tasked with control logic, while lower level modules do most of the processing \cite{nasa:sft}.
 
-\begin{figure}[hbt!]
-    \centering
-    \includegraphics[width=0.7\textwidth]{modularity/horizontal.png}
-    \caption{Horizontal partitioning}
-    \label{fig:mod_hor}
-\end{figure}
+% \begin{figure}[!h]
+% \centering
+% \begin{minipage}{.6\textwidth}
+%     \centering
+%     \includegraphics[width=0.7\textwidth]{modularity/horizontal.png}
+%     \label{fig:mod_hor}
+% \end{minipage}%
+% \begin{minipage}{.6\textwidth}
+%     \centering
+%     \includegraphics[width=0.7\textwidth]{modularity/vertical.png}
+%     \label{fig:mod_ver}
+% \end{minipage}
+% \caption{Horizontal and vertical partitioning}
+% \end{figure}
 
-\begin{figure}[hbt!]
-    \centering
-    \includegraphics[width=0.7\textwidth]{modularity/vertical.png}
-    \caption{Vertical partitioning}
-    \label{fig:mod_ver}
-\end{figure}
+% \begin{figure}[hbt!]
+%     \centering
+%     \includegraphics[width=0.7\textwidth]{modularity/horizontal.png}
+%     \caption{Horizontal partitioning}
+%     \label{fig:mod_hor}
+% \end{figure}
+
+% \begin{figure}[hbt!]
+%     \centering
+%     \includegraphics[width=0.7\textwidth]{modularity/vertical.png}
+%     \caption{Vertical partitioning}
+%     \label{fig:mod_ver}
+% \end{figure}
 
 Benefit of partitioning is the ability of software to isolate errors. Provided the software is correctly structured, an error occurring in a single module should not propagate to other modules. Meaning we can use modularity as a way to pinpoint the erroneous parts of software and attempt recovery. If recovery is not possible, the software should still be able to partially function, given that other parts of the software are not influenced by the fault. In most situations, partial functioning of a software is preferable to a complete shutdown.
 
@@ -57,8 +72,8 @@ Checkpoint and restart could be considered the basis of some of the more advance
     \label{fig:checkpoint}
 \end{figure}
 
-\subsubsection{Considerations for single version techniques}
+\subsubsection{Considerations for single-version techniques}
 
-Single version fault tolerance techniques are largely easier to develop when compared to the ones discussed in the following section. With this relative simplicity comes the drawback of being ill-suited for some situations. While these techniques should work well for transient faults that are unlikely to reoccur, a single version fault tolerant system will fail when attempting to deal with persistent faults. Even if an error is successfully detected, single version techniques provide no clear way of dealing with errors that stem from, or are heavily influenced by the design of the system. As an example, if the memory region containing a critical function has been permanently damaged, it matters not how many times we attempt to rerun said function, it will always cause an error. For this reason, single version techniques should be reserved for parts of software which are not mission critical and allow system to function even in their absence.
+Single-version fault tolerance techniques are largely easier to develop when compared to the ones discussed in the following section. With this relative simplicity comes the drawback of being ill-suited for some situations. While these techniques should work well for transient faults that are unlikely to reoccur, a single version fault tolerant system will fail when attempting to deal with persistent faults. Even if an error is successfully detected, single version techniques provide no clear way of dealing with errors that stem from, or are heavily influenced by the design of the system. As an example, if the memory region containing a critical function has been permanently damaged, it matters not how many times we attempt to rerun said function, it will always cause an error. For this reason, single version techniques should be reserved for parts of software which are not mission critical and allow system to function even in their absence.
 
 In order to effectively deal with solid faults, we need to consider multi-version techniques covered in the following section. A lot of these techniques take inspiration from single version techniques, or even directly build off of them.
